--- a/about.html
+++ b/about.html
@@ -57,12 +57,6 @@
 			<div class="hero-text">
 				<h1>Meet your friendly neighbourhood garden.</h1>
 			</div>
-			<!-- <div class = "hero-about col-1of2-reverse">
-				<img src="img/product-mod-image.png " alt="Photo of bouquet of flowers being held by a woman">
-			</div> -->
-		<!-- <p class="about-desc">
-			We are a family owned and operated full-service floral shop based in Vancouver, BC. creating bespoke floral arrangements for any type of occasions. We have been committed to offering only the freshest and finest floral arrangements and gifts with friendly and timely customer service support. Your support has continued to...
-		</p> -->
 		</section>
 
 		<!----- Values---->
@@ -99,8 +93,13 @@
 					<p>Vancouver, B.C.</p>
 					<p>V5R 5K6</p>
 					<p>(604) 738-0678 </p>
-					<p><i class="fab fa-instagram"></i> Instagram</p>
-					<p><i class="fab fa-facebook-f"></i> Facebook</p>
+					<p>
+						<a href="https://www.instagram.com/fourseasonsfloristry"><i class="fab fa-instagram"></i> Instagram</i>
+					</p>
+					<p>
+						<a href="https://www.facebook.com/fourseasonsfloral/"><i class="fab fa-facebook-f"></i> Facebook
+						</a>
+					</p>
 					<p>We’re open Monday to Fridays from 10am to 5pm.</p>
 				</div>
 			</section>
