detailed page review area update

--- a/detailed-product.html
+++ b/detailed-product.html
@@ -112,7 +112,8 @@
 					<label for="review-title">Review Title</label> <input type="text" id="review-title" name="review-title">
 					</form>
 
-					<label for="review-body">Review</label> <input type="text" id="review-body" name="review-body">
+					<!-- <label for="review-body">Review</label> <input type="text" id="review-body" name="review-body"> -->
+					<textarea id="review-body" name="review-body" rows="4" cols="50" placeholder="Write review..."></textarea>
 					</form>
 
 					<button class="btn-submit">Submit → </button>
