Updated review text box on all product pages

--- a/detailed-product.html
+++ b/detailed-product.html
@@ -110,14 +110,10 @@
 					</div>
 
 					<label for="review-title">Review Title</label> <input type="text" id="review-title" name="review-title">
-<<<<<<< HEAD
-					<label for="review-body">Review</label> <input type="text" id="review-body" name="review-body">
-=======
-					</form>
-
-					<!-- <label for="review-body">Review</label> <input type="text" id="review-body" name="review-body"> -->
+					
+					<label for="review-body">Review</label>
 					<textarea id="review-body" name="review-body" rows="4" cols="50" placeholder="Write review..."></textarea>
->>>>>>> master
+
 					</form>
 
 					<button class="btn-submit">Submit → </button>
@@ -142,7 +138,7 @@
 		              <p>I can tell that time, effort and love were spent into designing and arranging of the bouquet. I've never seen this much attention-to-detail from anyone before.
 		              </p>
 		            </div>
-		       </div> <!--End of .review-content-->
+		       </div> <!--End of .review-content
 
 		       <div class="review-content">
 	           	   <div class="review-star-rating">
