Added services overview page

--- a/about.html
+++ b/about.html
@@ -82,28 +82,30 @@
 		</section>
 
 		<!----- Location ---->
-		<section class="alternating-content grid">
-			<section class="location">
-				<div class ="alternating-content-img col-1of2">
-					<img src="img/map.png" alt="Photo of store's location on Google Maps">
-				</div>
-				<div class ="alternating-content-text col-2of2">
-					<h2>Our location</h2>
-					<p>#102-3375 Kingsway</p>
-					<p>Vancouver, B.C.</p>
-					<p>V5R 5K6</p>
-					<p>(604) 738-0678 </p>
-					<p>
-						<a href="https://www.instagram.com/fourseasonsfloristry"><i class="fab fa-instagram"></i> Instagram</i>
-					</p>
-					<p>
-						<a href="https://www.facebook.com/fourseasonsfloral/"><i class="fab fa-facebook-f"></i> Facebook
-						</a>
-					</p>
-					<p>We’re open Monday to Fridays from 10am to 5pm.</p>
-				</div>
+		<div class="row-spacer">
+			<section class="alternating-content grid">
+				<section class="location">
+					<div class ="alternating-content-img col-1of2">
+						<img src="img/map.png" alt="Photo of store's location on Google Maps">
+					</div>
+					<div class ="alternating-content-text col-2of2">
+						<h2>Our location</h2>
+						<p>#102-3375 Kingsway</p>
+						<p>Vancouver, B.C.</p>
+						<p>V5R 5K6</p>
+						<p>(604) 738-0678 </p>
+						<p>
+							<a href="https://www.instagram.com/fourseasonsfloristry"><i class="fab fa-instagram"></i> Instagram</i>
+						</p>
+						<p>
+							<a href="https://www.facebook.com/fourseasonsfloral/"><i class="fab fa-facebook-f"></i> Facebook
+							</a>
+						</p>
+						<p>We’re open Monday to Fridays from 10am to 5pm.</p>
+					</div>
+				</section>
 			</section>
-		</section>
+		</div>
 
 
 		<!----- Footer----->
