--- a/citations.html
+++ b/citations.html
@@ -91,6 +91,14 @@
 					<li>Loup, Alex. Photo of eucalyptus in pink planter [Photo]. Retrieved from <a href="https://unsplash.com/photos/6hgrfOJhr74">https://unsplash.com/photos/6hgrfOJhr74</a></li>
 
 					<li>Bui, Mong. Photo of aloe in wood planter [Photo]. Retrieved from <a href="https://unsplash.com/photos/NznxEfw9iVI">https://unsplash.com/photos/NznxEfw9iVI</a></li>
+
+					<li>Ross, Alexander. Photo of bride holding onto white and pink flowers [Photo]. Retrieved from <a href="https://unsplash.com/photos/MnqfRlk4AOQ">https://unsplash.com/photos/MnqfRlk4AOQ</a></li>
+
+					<li>Spratt, Annie. Floral centerpiece on dinner table [Photo]. Retrieved from <a href="https://unsplash.com/photos/TQSB-suJu1k">hhttps://unsplash.com/photos/TQSB-suJu1k</a></li>
+
+					<li>Spratt, Annie. Floral wrapped in silverware on plate [Photo]. Retrieved from <a href="https://unsplash.com/photos/uDoDaHA_mH8">https://unsplash.com/photos/uDoDaHA_mH8/a></li>
+
+				
 				</ul>
 
 		</section> 
