--- a/shop-services.html
+++ b/shop-services.html
@@ -7,10 +7,10 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>Four Seasons Floral Homepage</title>
+		<title>Shop</title>
 
 		 <!-- Referenced from Week 3's coding tutorial and https://web.dev/responsive-web-design-basics/#viewport-->
-    	 <meta name="viewport" content="width=device-width, initial-scale=1">
+    	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<!--Referenced Week 2's CSS coding tutorial for linking CSS files-->
 		<link rel="stylesheet" href="css/normalize.css">
@@ -26,12 +26,12 @@
 		<header>
 			<div class ="announcement-bar col-1of1-xs">Free delivery over $49. Curbside pickup is available!</div>
 			 <nav class="grid">
-		          <div class="logo col-1of2 ">
+		          <div class="col-1of2 logo">
 		                 <a href="index.html"><img class="logo" src="img/logo.png" alt="Logo of company" width="120" height="30"></a>
 		          </div>
 
-            	 <!--  <div class="grid-col-1of6 search-bar">
-						<input type="text" id="search" name="search" placeholder="Search...">
+            	  <!-- <div class="grid-col-1of6 search-bar">
+							<input type="text" id="search" name="search" placeholder="Search...">
             	  </div> -->
 
                   <div class="col-1of6">
@@ -43,79 +43,45 @@
                   <div class="col-1of6">
                      	 <a href="support.html">Support</a>
                   </div>
+
                    <div class="col-1of6">
                  		 <a href="cart.html"> <img src="img/icons/cart-icon.png" alt="Green icon of a shopping cart"> </a>
             	  </div>
 	      </nav>
 		</header>
 
-		<!----- Hero Banner----->
-		<section class ="home hero">
-			<div class="hero-text">
-				<h1>Spread happiness with summer's blooms.</h1>
-				<a href="shop.html">
-					<button type="button" class="btn-main"> Shop Bouquets</button>
-				</a>
-			</div>
+		<!----- Introduction----->
+		<section class="services hero">
+				<div class="hero-text">
+					<h1>Our services</h1>
+					<p>Flowers can become part of an experience that makes an occasion memorable. At Four Seasons Floral, we strive to create arrangements that complement a wedding, birthday, or a corporate gathering.</p>
+				</div>
 		</section>
 
-		<!----- Product/Service Offerings---->
+		<!----- Products ---->
 		<section class ="categories grid">
-			<div class ="menu">
+			<div class ="menu services">
 				<a href="shop.html">
-					<img src="img/flower-tile.png" alt="Photo of pink peonies">
-					<p>Flowers</p>
+					<img src="img/alexander-ross.jpg" alt="Photo of bride holding white and pink bouquet">
+					<p>Full Service</p>
 				</a>
 			</div>
 
 
-			<div class ="menu">
+			<div class ="menu services">
 				<a href="shop-plants.html">
-					<img src="img/plants-tile.jpg" alt="Photo of green plant">
-					<p>Plants</p>
+					<img src="img/annie-spratt.jpg" alt="Photo of pink and green flowers on dinner table">
+					<p>Corporate</p>
 				</a>
 			</div>
 
-			<div class ="menu">
-				<a href="shop-services.html">
-					<img src="img/services-tile.jpg" alt="Photo of flowers on a white barrel for an event">
-					<p>Services</p>
-				</a>
-			</div>
-		</div>
-		</section>
-
-		<!----- Alternating Content ----->
-		<section class="alternating-content grid">
-			<div class ="alternating-content-img col-1of2">
-				<img src="img/home-grown.jpg" alt="Photo of purple flowers in a garden">
-			</div>
-			<div class ="alternating-content-text col-2of2">
-				<h2>Home grown.</h2>
-				<p>We source our flowers from local suppliers, lowering our carbon footprint and providing the freshest blooms to our customers.</p>
-				<a href="shop.html">
-					<button type="button" class="btn-main">learn more</button>
+			<div class ="menu services">
+				<a href="shop-plants.html">
+					<img src="img/annie-spratt-plate.jpg" alt="Photo of flowers wrapped in utensils on plate">
+					<p>Add Ons</p>
 				</a>
 			</div>
 		</section>
-
-		<div class="row-spacer">
-			<section class="alternating-content grid">
-					<div class ="alternating-content-text col-1of2-right">
-						<h2>The gift of giving.</h2>
-						<p>Give one of nature’s gifts to the people who mean the most to you.</p>
-						<a href="shop.html">
-								<button type="button" class="btn-main">shop flowers</button>
-						</a>
-					</div>
-					<div class ="alternating-content-img col-2of2">
-						<img src="img/gift-of-giving.jpg" alt="Photo of bouquet of flowers being held by a woman">
-					</div>
-			</section>
-		</div>
-
-	<!-- </div> -->
-
 		<!----- Footer----->
 		 <section class="main-footer grid">
 			 <div class="child-footer about">
@@ -148,7 +114,7 @@
 	 	</section>
 
  		<div class="sub-footer">
-	 		<p>	
+	 		<p>	Made with love in Vancouver, B.C.
 	 			<a href="styleguide.html" target="_blank"> Styleguide</a>
 	 			<a href="citations.html" target="_blank"> Citations</a>
 	 			<a href ="https://github.com/jaxofone/iat339-p02" target="_blank">GitHub</a>
