Updated cart page to Jac's folder, and removed resizing option
- Pasted updated code to Jac's copy 
- Added code to remove resizing for text box

--- a/cart.html
+++ b/cart.html
@@ -49,17 +49,55 @@
 	      </nav>
 		</header>
 
+		<!----- top container---->
+		<div>
+			<div class='padR-s padL-s'>
+				<div class="col4 border-bottom">
+					<p>Product</p>
+					<p>Size</p>
+					<p>Quantity</p>
+					<p>Price</p>
+				</div>
+				<div class="col4">
+					<div>
+						<img class="product-image" src="http://www.sfu.ca/~bzamani/iat339/p02/p02-s03/img/products/red-bouquet.png" alt="">
+						<p>Lover's Sunrise</p>
+					</div>
+					<p>Small</p>
+					<div>
+						<button>-</button>
+							<span>1</span>
+						<button>+</button>
+					</div>
+					<p>$45</p>
+				</div>
+			</div>
+			<div>
+				<div class='half-width-left'>
+					<div class="flex jc-sb">
+						<p>Subtotal</p>
+						<p>$100.00</p>
+					</div>
+					<div class="flex jc-sb">
+						<p>Taxes</p>
+						<p>Calculated upon check out</p>
+					</div>
+					<div class="flex jc-sb">
+						<p>Shipping</p>
+						<p>Calculated upon check out</p>
+					</div>
+					<div class="flex jc-sb">
+						<p>Estimated Total</p>
+						<p>$100.00</p>
+					</div>
+					<div class="right-align">
+						<button type="button" class="btn-main">Check Out</button>
+				</div>
+				</div>
+			</div>
 
-		<!----- Alternating Content ----->
-    <div class ="grid products">
-        <div class ="product-item col-1of3">
-             <img src="img/product-lovers-sunrise.png" alt="Photo of Lover's Sunrise bouquet">
-              <p class="product-name">Lover's Sunrise</p>
-            <p class ="price">$45.99</p>
-            
-            </div>
-        </div>
-      </div>
+		</div>
+
 
 		<!----- Footer----->
 		 <section class="main-footer grid">
