--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 			<div class ="alternating-content-text col-2of2">
 				<h2>Home grown.</h2>
 				<p>We source our flowers from local suppliers, lowering our carbon footprint and providing the freshest blooms to our customers.</p>
-				<a href="shop.html">
+				<a href="about.html">
 					<button type="button" class="btn-main">learn more</button>
 				</a>
 			</div>
