Updated pages based on Thursday's feedback
- Responsiveness
- Font change
- Tile changes
- Removed hero banners that were not homepage

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
 		<section class ="values grid">
 				<div class ="values col-1of3">
 					<img src="img/icons/family.png" alt="Icon of a family">
-					<h3>Family owned & operated</h3>
+					<h3>Family owned and operated</h3>
 					<p> We are a multigenerational business that has served Vancouver for over 25 years. </p>
 				</div>
 
@@ -137,15 +137,20 @@
 				 </p>
 
 			 </div>
-		 	</div>
+
+			 <div class="child-footer mailing-list">
+				 <h3>STAY IN TOUCH</h3>
+				 <p>No spam. Just great content.</p>
+				 <input type="text" id="email" name="email" placeholder='Your email address'>
+			 </div>
+			 
+		 	
 	 	</section>
 
  		<div class="sub-footer">
-	 		<p>	Made with love in Vancouver, B.C.
 	 			<a href="styleguide.html" target="_blank"> Styleguide</a>
 	 			<a href="citations.html" target="_blank"> Citations</a>
 	 			<a href ="https://github.com/jaxofone/iat339-p02" target="_blank">GitHub</a>
-	 		</p>
  		</div>
 
 	</body>
