--- a/index.html
+++ b/index.html
@@ -30,10 +30,6 @@
 		                 <a href="index.html"><img class="logo" src="img/logo.png" alt="Logo of company" width="120" height="30"></a>
 		          </div>
 
-            	 <!--  <div class="grid-col-1of6 search-bar">
-						<input type="text" id="search" name="search" placeholder="Search...">
-            	  </div> -->
-
                   <div class="col-1of6">
                     	<a href="shop.html">Shop</a>
                   </div>
@@ -54,32 +50,35 @@
 			<div class="hero-text">
 				<h1>Spread happiness with summer's blooms.</h1>
 				<a href="shop.html">
-					<button type="button" class="btn-main"> Shop Bouquets</button>
+					<button type="button" class="btn-main"> Shop summer collection</button>
 				</a>
 			</div>
 		</section>
 
-		<!----- Product/Service Offerings---->
+		<!----- Product & Service Offerings---->
 		<section class ="categories grid">
 			<div class ="menu">
 				<a href="shop.html">
-					<img src="img/flower-tile.png" alt="Photo of pink peonies">
-					<p>Flowers</p>
+					<!-- <img src="img/flower-tile.png" alt="Photo of pink peonies"> -->
+					<h2>Fresh bunches </h2>
+					<p>Shop Flowers →</p>
 				</a>
 			</div>
 
 
 			<div class ="menu">
 				<a href="shop-plants.html">
-					<img src="img/plants-tile.jpg" alt="Photo of green plant">
-					<p>Plants</p>
+					<!-- <img src="img/plants-tile.jpg" alt="Photo of green plant"> -->
+					<h2>Green spaces</h2>
+					<p>Shop Plants →</p>
 				</a>
 			</div>
 
 			<div class ="menu">
 				<a href="shop-services.html">
-					<img src="img/services-tile.jpg" alt="Photo of flowers on a white barrel for an event">
-					<p>Services</p>
+					<!-- <img src="img/services-tile.jpg" alt="Photo of flowers on a white barrel for an event"> -->
+					<h2> Life's moments</h2>
+					<p>View Services →</p>
 				</a>
 			</div>
 		</div>
@@ -114,28 +113,23 @@
 			</section>
 		</div>
 
-	<!-- </div> -->
-
 		<!----- Footer----->
 		 <section class="main-footer grid">
 			 <div class="child-footer about">
-				 <h3 class="web">ABOUT FOUR SEASONS FLORAL</h3>
-				 <p>We are a family-owned and full-service floral shop
-					 based in Vancouver, BC.  creating bespoke floral
-					 arrangements for any types of occasions. 
-					 We’re open Monday - Fridays from
-					 10am - 5pm PST</p>
+				 <h3>ABOUT FOUR SEASONS FLORAL</h3>
+				 <p>We are a family-owned and full-service floral shop based in Vancouver, BC. that creates bespoke floral arrangements.
+			 	</p>
 			</div>
 
 			 <div class="child-footer location">
-				 <h3 class="web">VISIT US</h3>
-				 <p>102 3375 Kingsway
+				 <h3>VISIT US</h3>
+				 <p>#102-3375 Kingsway
 					Vancouver, B.C. 
 					 V5R 5K6  </p>
 			</div>
 
 			 <div class="child-footer contact">
-				 <h3 class="web">CONTACT US</h3>
+				 <h3 >CONTACT US</h3>
 				 <p>(604) 738-0678</p>
 				 <p>
 				 	<a href="https://www.instagram.com/fourseasonsfloristry"><i class="fab fa-instagram"></i> Instagram</a>
@@ -144,15 +138,19 @@
 				 	<a href="https://www.facebook.com/fourseasonsfloral/"><i class="fab fa-facebook-f"></i> Facebook</a>
 				 </p>
 			 </div>
-		 	</div>
+
+			 <div class="child-footer mailing-list">
+				 <h3>STAY IN TOUCH</h3>
+				 <p>No spam. Just great content.</p>
+				 <input type="text" id="email" name="email" placeholder='Your email address'>
+				 <button type="button" class="btn-submit">→</button>
+			 </div>
 	 	</section>
 
  		<div class="sub-footer">
-	 		<p>	
-	 			<a href="styleguide.html" target="_blank"> Styleguide</a>
-	 			<a href="citations.html" target="_blank"> Citations</a>
-	 			<a href ="https://github.com/jaxofone/iat339-p02" target="_blank">GitHub</a>
-	 		</p>
+ 			<a href="styleguide.html" target="_blank"> Styleguide</a>
+ 			<a href="citations.html" target="_blank"> Citations</a>
+ 			<a href ="https://github.com/jaxofone/iat339-p02" target="_blank">GitHub</a>
  		</div>
 
 	</body>
