--- a/shipping-details.html
+++ b/shipping-details.html
@@ -47,17 +47,74 @@
 		<!----- top container---->
 		<section class="cart">
 
-			<h1> My Cart </h1>
+			<h1> Your shipping details </h1>
 
-			<div class='padR-s padL-s'>
+			<div class="form">
+				<form action="/action_page.php">
+					<div class="grid-col-1of2">
+							<div class="name-item">
+								<label for="fname">First Name</label>
+								<input type="text" id="fname" name="fname" placeholder="Your first name">
+							</div>
+
+
+						<div class="name-item">
+							<label for="lname">Last Name</label>
+							<input type="text" id="lname" name="lname" placeholder="Your last name">
+						</div>
+					</div>
+
+					<div class="grid-col-1of1">
+						<!-- <div class="address-item"> -->
+						<label for="address">Address</label>
+				  		<input type="text" id="address" name="address" placeholder='Your address'>
+				  		</div>
+				  	</div>
+
+				  	<div class="grid-col-1of3">
+				  		<label for="province">Province</label>
+				  		<input type="text" id="province" name="Province" placeholder='Your province'>
+				  	</div>
+
+				  	<div class="grid-col-1of3">
+						<label for="city">City</label>
+				  		<input type="text" id="city" name="city" placeholder='Your city'>
+				    </div>
+
+				    <div class="grid-col-1of3">
+						<label for="pc">Postal Code</label>
+				   		<input type="text" id="pc" name="pc" placeholder='XXX XXX'>
+				    	</div>
+
+				  	<div class="grid-col-1of2">
+				  		<div class="contact-item">
+				  			<label for="email-ad">Email Address</label>
+				  			<input type="text" id="email-ad" name="email-ad" placeholder='name@domain.com'>
+				  		</div>
+
+						<div class="contact-item">
+							<label for="phone-number">Phone Number</label>
+							<input type="text" id="phone-number" name="phone-number" placeholder="(###) ###-####">
+						</div>
+					</div>
+
+					<div class="btn-item">
+						<button class="btn-submit">Submit → </button>
+					</div>
+				</form>
+			</div>
+
+			<h1> Your billing details </h1>
+
+			<!-- <div class='padR-s padL-s'>
 				<div class="col4 border-bottom">
 					<p>Product</p>
 					<p>Size</p>
 					<p>Quantity</p>
 					<p>Price</p>
-				</div>
+				</div> -->
 
-				<div class="col4">
+				<!-- <div class="col4">
 					<div class="product-name">
 						<img class="product-image" src="img/products/red-bouquet.png" alt="Photo of Lover's Sunrise bouquet">
 						<p>Lover's Sunrise</p>
@@ -85,7 +142,7 @@
 					<p class="product-price">$9.99</p>
 				</div>
 
-			</div>
+			</div> -->
 			<div>
 				<div class='half-width-left'>
 					<div class="flex jc-sb">
@@ -105,14 +162,57 @@
 						<p>$54.99</p>
 					</div>
 					<div class="right-align">
-						<a href="shipping-details.html">
-							<button type="button" class="btn-main">Check Out</button>
-						</a>
+						<button type="button" class="btn-main">Check Out</button>
 				</div>
 				</div>
 			</div>
 
 		</section>
+
+
+
+		<!----- Footer----->
+		 <section class="main-footer grid">
+			 <div class="child-footer about">
+				 <h3 class="web">ABOUT FOUR SEASONS FLORAL</h3>
+				 <p>We are a family-owned and full-service floral shop
+					 based in Vancouver, BC.  creating bespoke floral
+					 arrangements for any types of occasions. 
+					 We’re open Monday - Fridays from
+					 10am - 5pm PST</p>
+			</div>
+
+			 <div class="child-footer location">
+				 <h3 class="web">VISIT US</h3>
+				 <p>102 3375 Kingsway
+					Vancouver, B.C. 
+					 V5R 5K6  </p>
+			</div>
+
+			 <div class="child-footer contact">
+				 <h3 class="web">CONTACT US</h3>
+				 <p>(604) 738-0678</p>
+				 <p>
+				 	<a href="https://www.instagram.com/fourseasonsfloristry"><i class="fab fa-instagram"></i> Instagram</a>
+				 </p>
+				 <p>
+				 	<a href="https://www.facebook.com/fourseasonsfloral/"><i class="fab fa-facebook-f"></i> Facebook</a>
+				 </p>
+			 </div>
+		 	
+		 	<div class="child-footer mailing-list">
+				 <h3>STAY IN TOUCH</h3>
+				 <p>No spam. Just great content.</p>
+				 <input type="text" id="email" name="email" placeholder='Your email address'>
+			 </div>
+			 
+	 	</section>
+
+ 		<div class="sub-footer">
+	 			<a href="styleguide.html" target="_blank"> Styleguide</a>
+	 			<a href="citations.html" target="_blank"> Citations</a>
+	 			<a href ="https://github.com/jaxofone/iat339-p02" target="_blank">GitHub</a>
+ 		</div>
 
 	</body>
 
