--- a/shop-services.html
+++ b/shop-services.html
@@ -110,15 +110,19 @@
 				 	<a href="https://www.facebook.com/fourseasonsfloral/"><i class="fab fa-facebook-f"></i> Facebook</a>
 				 </p>
 			 </div>
-		 	</div>
+		 
+		 	<div class="child-footer mailing-list">
+				 <h3>STAY IN TOUCH</h3>
+				 <p>No spam. Just great content.</p>
+				 <input type="text" id="email" name="email" placeholder='Your email address'>
+			 </div>
+			 
 	 	</section>
 
  		<div class="sub-footer">
-	 		<p>	Made with love in Vancouver, B.C.
 	 			<a href="styleguide.html" target="_blank"> Styleguide</a>
 	 			<a href="citations.html" target="_blank"> Citations</a>
 	 			<a href ="https://github.com/jaxofone/iat339-p02" target="_blank">GitHub</a>
-	 		</p>
  		</div>
 
 	</body>
