--- a/shop.html
+++ b/shop.html
@@ -30,10 +30,6 @@
 		                 <a href="index.html"><img class="logo" src="img/logo.png" alt="Logo of company" width="120" height="30"></a>
 		          </div>
 
-            	  <!-- <div class="grid-col-1of6 search-bar">
-							<input type="text" id="search" name="search" placeholder="Search...">
-            	  </div> -->
-
                   <div class="col-1of6">
                     	<a href="shop.html">Shop</a>
                   </div>
@@ -63,15 +59,9 @@
 				<div class ="product-item col-1of3">
 				  	 <a href="detailed-product.html">
 					  	 <img src="img/products/red-bouquet.png" alt="Photo of Lover's Sunrise bouquet">
-					  	  <!-- <div class="container-title"> -->
 					  	 	 <p class="product-name">Lover's Sunrise</p>
-					  	  <!-- </div> -->
 						 	 <p class ="price">$45.99</p>
-						 	 <a class ="btn-add" href="cart.html"> + Add </a>
-
-						  <!-- <div class="btn-position">
-								<a class ="btn-add" href="detailed-product.html"> + Quick Add </a>
-					 	  </div> -->
+						 	 <a class ="btn-add" href="cart.html"> Add to cart </a>
 				 	</a>
 				</div>
 
@@ -80,7 +70,7 @@
 					  	 <img src="img/products/red-bouquet.jpg" alt="Photo of red bouquet">
 					  	  <p class="product-name">Radiantly Rouge</p>
 						  <p class ="price">$55.99</p>
-						  <a class ="btn-add" href="cart.html"> + Add </a>
+						  <a class ="btn-add" href="cart.html"> Add to cart </a>
 					</a>
 
 				</div>
@@ -90,18 +80,16 @@
 					  	 <img src="img/products/light-pink-bouquet.jpg" alt="Photo of light pink bouquet">
 					  	  <p class="product-name">English Gardens</p>
 						  <p class ="price">$48.99</p>
-						  <a class ="btn-add" href="cart.html"> + Add </a>
+						  <a class ="btn-add" href="cart.html"> Add to cart </a>
 					</a>
 				</div>
-		<!-- </section> -->
 
-		<!-- <section class ="grid products"> -->
 			<div class ="product-item col-1of3">
 				<a href="detailed-product-2.html">
 				  	 <img src="img/products/nemo-bouquet.jpg" alt="Photo of orange and blue bouquet">
 				  	  <p class="product-name">Just Keep Swimming</p>
 					  <p class ="price">$45.99</p>
-					  <a class ="btn-add" href="cart.html"> + Add </a>
+					  <a class ="btn-add" href="cart.html"> Add to cart </a>
 				</a>
 			</div>
 
@@ -110,7 +98,7 @@
 				  	 <img src="img/products/lavender-bouquet.jpg" alt="Photo of purple bouquet">
 				  	  <p class="product-name">Lavender Dreams</p>
 					  <p class ="price">$40.99</p>
-					  <a class ="btn-add" href="cart.html"> + Add </a>
+					  <a class ="btn-add" href="cart.html"> Add to cart </a>
 				</a>
 			</div>
 
@@ -119,9 +107,10 @@
 				  	 <img src="img/products/summer-bouquet.jpg" alt="Photo of purple bouquet">
 				  	  <p class="product-name">Spirit of Summer</p>
 					  <p class ="price">$44.99</p>
-					 <a class ="btn-add" href="cart.html"> + Add </a>
+					 <a class ="btn-add" href="cart.html"> Add to cart </a>
 				</a>
 			</div>
+
 		</section>
 
 		<!----- Footer----->
@@ -152,15 +141,19 @@
 				 	<a href="https://www.facebook.com/fourseasonsfloral/"><i class="fab fa-facebook-f"></i> Facebook</a>
 				 </p>
 			 </div>
-		 	</div>
+		 	
+		 	<div class="child-footer mailing-list">
+				 <h3>STAY IN TOUCH</h3>
+				 <p>No spam. Just great content.</p>
+				 <input type="text" id="email" name="email" placeholder='Your email address'>
+			 </div>
+			 
 	 	</section>
 
  		<div class="sub-footer">
-	 		<p>	Made with love in Vancouver, B.C.
-	 			<a href="styleguide.html" target="_blank"> Styleguide</a>
-	 			<a href="citations.html" target="_blank"> Citations</a>
-	 			<a href ="https://github.com/jaxofone/iat339-p02" target="_blank">GitHub</a>
-	 		</p>
+ 			<a href="styleguide.html" target="_blank"> Styleguide</a>
+ 			<a href="citations.html" target="_blank"> Citations</a>
+ 			<a href ="https://github.com/jaxofone/iat339-p02" target="_blank">GitHub</a>
  		</div>
 
 	</body>
