--- a/support.html
+++ b/support.html
@@ -52,6 +52,9 @@
 		<section class ="faq hero">
 			<div class="hero-text">
 				<h1>Frequently Asked Questions</h1>
+				<p> 
+					Couldn't find an answer you were looking for? Reach out to us at <a href ="mailto:fourseasonsfloristry@gmail.com">fourseasonsfloristry@gmail.com</a>.
+				</p>
 			</div>
 		</section>
 
@@ -80,6 +83,21 @@
 		      	Occasionally, substitutions may be necessary to create your bouquet due to the availability of certain flowers. Care is taken to maintain the style, theme and color scheme of the arrangement, using flowers of equal value. In single-flower arrangements, such as an all rose bouquet, or orchids, we will make every attempt to match the flower type, but may substitute with another color.
 		      </p>
 		    </div>
+
+		    <button class="accordion">What types of payments do you accept?</button>
+		    <div class="panel">
+		      <p>
+		      	For our online orders, we currently take Visa, MasterCard, and American Express! 
+		      </p>
+		    </div>
+
+		    <button class="accordion">What is your refund policy?</button>
+		    <div class="panel">
+		      <p>
+		      	All arrangements are a final sale. We are always striving to create high quality arrangments, but if you feel that it wasn't up to your standards, reach out to us at fourseasonsfloristry@gmail.com. We can explore a solution that best accomodates you.
+		      </p>
+		    </div>
+
 	 </section>
 
 	<!----- Javascript for accordian----->
@@ -107,8 +125,7 @@
 			 <p>We are a family-owned and full-service floral shop
 				 based in Vancouver, BC.  creating bespoke floral
 				 arrangements for any types of occasions. 
-				 We’re open Monday - Fridays from
-				 10am - 5pm PST</p>
+			</p>
 		</div>
 
 		 <div class="child-footer location">
@@ -128,15 +145,19 @@
 				 	<a href="https://www.facebook.com/fourseasonsfloral/"><i class="fab fa-facebook-f"></i> Facebook</a>
 				 </p>
 		 </div>
-	 	</div>
+	 	
+	 	<div class="child-footer mailing-list">
+			 <h3>STAY IN TOUCH</h3>
+			 <p>No spam. Just great content.</p>
+			 <input type="text" id="email" name="email" placeholder='Your email address'>
+		</div>
+			 
  	</section>
 
 		<div class="sub-footer">
- 		<p>	Made with love in Vancouver, B.C.
  			<a href="styleguide.html" target="_blank"> Styleguide</a>
  			<a href="citations.html" target="_blank"> Citations</a>
  			<a href ="https://github.com/jaxofone/iat339-p02" target="_blank">GitHub</a>
- 		</p>
 		</div>
 
 </body>
