--- a/index.html
+++ b/index.html
@@ -29,9 +29,17 @@
 		          <div class="logo col-1of2 ">
 		                 <a href="index.html"><img class="logo" src="img/logo.png" alt="Logo of company" width="120" height="30"></a>
 		          </div>
-
+		          		
                   <div class="col-1of6">
                     	<a href="shop.html">Shop</a>
+                    	<!---Dropdown tutorial from https://www.w3schools.com/css/css_dropdowns.asp-->
+                    	<div class="dropdown-items">
+                    		 <a href="shop.html">Flowers</a>
+                    		 <a href="shop-plants.html">Plants</a>
+                    	</div>
+                  </div>
+                   <div class="col-1of6">
+                      	<a href="shop-services.html">Services</a>
                   </div>
                   <div class="col-1of6">
                       	<a href="about.html">About</a>
@@ -41,7 +49,7 @@
                   </div>
                    <div class="col-1of6">
                  		 <a href="cart.html"> <img src="img/icons/cart-icon.png" alt="Green icon of a shopping cart"> </a>
-            	  </div>
+            	  </div>       	
 	      </nav>
 		</header>
 
@@ -59,7 +67,6 @@
 		<section class ="categories grid">
 			<div class ="menu">
 				<a href="shop.html">
-					<!-- <img src="img/flower-tile.png" alt="Photo of pink peonies"> -->
 					<h2>Fresh bunches </h2>
 					<p>Shop Flowers →</p>
 				</a>
@@ -68,7 +75,6 @@
 
 			<div class ="menu">
 				<a href="shop-plants.html">
-					<!-- <img src="img/plants-tile.jpg" alt="Photo of green plant"> -->
 					<h2>Green spaces</h2>
 					<p>Shop Plants →</p>
 				</a>
@@ -76,7 +82,6 @@
 
 			<div class ="menu">
 				<a href="shop-services.html">
-					<!-- <img src="img/services-tile.jpg" alt="Photo of flowers on a white barrel for an event"> -->
 					<h2> Life's moments</h2>
 					<p>View Services →</p>
 				</a>
@@ -114,7 +119,7 @@
 		</div>
 
 		<!----- Footer----->
-		 <section class="main-footer grid">
+		 <footer class="main-footer grid">
 			 <div class="child-footer about">
 				 <h3>ABOUT FOUR SEASONS FLORAL</h3>
 				 <p>We are a family-owned and full-service floral shop based in Vancouver, BC. that creates bespoke floral arrangements.
@@ -140,12 +145,12 @@
 			 </div>
 
 			 <div class="child-footer mailing-list">
-				 <h3>STAY IN TOUCH</h3>
+				 <h3>GET THE DIRT</h3>
 				 <p>No spam. Just great content.</p>
-				 <input type="text" id="email" name="email" placeholder='Your email address'>
+				 <input type="text" id="email" name="email" placeholder='name@domain.com'>
 				 <button type="button" class="btn-submit">→</button>
 			 </div>
-	 	</section>
+	 	</footer>
 
  		<div class="sub-footer">
  			<a href="styleguide.html" target="_blank"> Styleguide</a>
