--- a/full-service-form-5of5.html
+++ b/full-service-form-5of5.html
@@ -7,7 +7,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>Cart</title>
+		<title>Support</title>
 
 		 <!-- Referenced from Week 3's coding tutorial and https://web.dev/responsive-web-design-basics/#viewport-->
     	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,21 +17,22 @@
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/fonts.css">
 		<link rel="stylesheet" href="css/grids.css">
+    <script src="main.js"></script>
 		<!-- Script for fontawesome -->
 		<script src="https://kit.fontawesome.com/036df06bbb.js" crossorigin="anonymous"> </script>
 	</head>
 
 	<body>
 		<!----- Top Nav ----->
-		<header>
-			<div class ="announcement-bar col-1of1-xs">Free delivery over $49. Curbside pickup is available!</div>
-			<nav class="grid">
+    	<header>
+			 <nav class="grid">
 		          <div class="logo col-1of2 ">
 		                 <a href="index.html"><img class="logo" src="img/logo.png" alt="Logo of company" width="120" height="30"></a>
 		          </div>
 		          		
                   <div class="col-1of6">
                     	<a href="shop.html">Shop</a>
+                    	<!---Dropdown tutorial from https://www.w3schools.com/css/css_dropdowns.asp-->
                     	<div class="dropdown-items">
                     		 <a href="shop.html">Flowers</a>
                     		 <a href="shop-plants.html">Plants</a>
@@ -48,81 +49,24 @@
                   </div>
                    <div class="col-1of6">
                  		 <a href="cart.html"> <img src="img/icons/cart-icon.png" alt="Green icon of a shopping cart"> </a>
-            	  </div>
-		            	
+            	  </div>       	
 	      </nav>
 		</header>
 
-		<!----- top container---->
-		<section class="cart">
-
-			<h1> My Cart </h1>
-
-			<div class='padR-s padL-s'>
-				<div class="col4 border-bottom">
-					<p>Product</p>
-					<p>Size</p>
-					<p>Quantity</p>
-					<p>Price</p>
-				</div>
-
-				<div class="col4">
-					<div class="product-name">
-						<img class="product-image" src="img/products/red-bouquet.png" alt="Photo of Lover's Sunrise bouquet">
-						<p>Lover's Sunrise</p>
-					</div>
-					<p class="product-size">Small</p>
-					<div>
-						<button>-</button>
-							<span class="product-quantity">1</span>
-						<button>+</button>
-					</div>
-					<p class="product-price">$45</p>
-				</div>
-
-				<div class="col4">
-					<div class="product-name">
-						<img class="product-image" src="img/products/mong-bui.jpg" alt="Photo of an aloe succulent in a wooden planter">
-						<p>Aloe Succulent</p>
-					</div>
-					<p class="product-size">Small</p>
-					<div>
-						<button>-</button>
-							<span class="product-quantity">1</span>
-						<button>+</button>
-					</div>
-					<p class="product-price">$9.99</p>
-				</div>
+		<section class ="confirmation hero">
+			<div class="hero-text">
+				<h1>Your form has been submitted!</h1>
+				<p>
+					Be on the lookout for an email within 1-3 business days. Thank you for your support!
+				</p>
 
 			</div>
-			<div>
-				<div class='half-width-left'>
-					<div class="flex jc-sb">
-						<p>Subtotal</p>
-						<p>$54.99</p>
-					</div>
-					<div class="flex jc-sb">
-						<p>Taxes</p>
-						<p>Calculated upon check out</p>
-					</div>
-					<div class="flex jc-sb">
-						<p>Shipping</p>
-						<p>Calculated upon check out</p>
-					</div>
-					<div class="flex jc-sb">
-						<p>Estimated Total</p>
-						<p>$54.99</p>
-					</div>
-					<div class="right-align">
-						<a href="shipping-details.html">
-							<button type="button" class="btn-main">Check Out</button>
-						</a>
-				</div>
-				</div>
-			</div>
+
+			<a href="index.html">
+				<button type="button" class="btn-main">RETURN HOME</button>
+			</a>
 
 		</section>
-
-	</body>
+</body>
 
 </html>
