--- a/support.html
+++ b/support.html
@@ -26,16 +26,20 @@
 		<!----- Top Nav ----->
     	<header>
 			 <nav class="grid">
-		          <div class="col-1of2 logo">
+		          <div class="logo col-1of2 ">
 		                 <a href="index.html"><img class="logo" src="img/logo.png" alt="Logo of company" width="120" height="30"></a>
 		          </div>
-
-            	<!--   <div class="grid-col-1of6 search-bar">
-						<input type="text" id="search" name="search" placeholder="Search...">
-            	  </div> -->
-
+		          		
                   <div class="col-1of6">
                     	<a href="shop.html">Shop</a>
+                    	<!---Dropdown tutorial from https://www.w3schools.com/css/css_dropdowns.asp-->
+                    	<div class="dropdown-items">
+                    		 <a href="shop.html">Flowers</a>
+                    		 <a href="shop-plants.html">Plants</a>
+                    	</div>
+                  </div>
+                   <div class="col-1of6">
+                      	<a href="shop-services.html">Services</a>
                   </div>
                   <div class="col-1of6">
                       	<a href="about.html">About</a>
@@ -45,11 +49,11 @@
                   </div>
                    <div class="col-1of6">
                  		 <a href="cart.html"> <img src="img/icons/cart-icon.png" alt="Green icon of a shopping cart"> </a>
-            	  </div>
+            	  </div>       	
 	      </nav>
 		</header>
 
-		<section class ="faq hero">
+		<section class ="support hero">
 			<div class="hero-text">
 				<h1>Frequently Asked Questions</h1>
 				<p> 
@@ -119,7 +123,7 @@
     </script>
 
 	<!----- Footer----->
-	 <section class="main-footer grid">
+	 <footer class="main-footer grid">
 		 <div class="child-footer about">
 			 <h3 class="web">ABOUT FOUR SEASONS FLORAL</h3>
 			 <p>We are a family-owned and full-service floral shop
@@ -147,12 +151,11 @@
 		 </div>
 	 	
 	 	<div class="child-footer mailing-list">
-			 <h3>STAY IN TOUCH</h3>
+			 <h3>GET THE DIRT</h3>
 			 <p>No spam. Just great content.</p>
-			 <input type="text" id="email" name="email" placeholder='Your email address'>
-		</div>
-			 
- 	</section>
+			 <input type="text" id="email" name="email" placeholder='name@domain.com'>
+		</div> 
+ 	</footer>
 
 		<div class="sub-footer">
  			<a href="styleguide.html" target="_blank"> Styleguide</a>
